3989
Here's a reduced example:

Base.java 
```scala
abstract class Base {
  abstract Class foo(Object o);
}
```

Derived.scala 
```scala
class Derived extends Base {
  def foo(a: AnyRef) = classOf[String]
}
```

Compilation
```scala
$$ scalac Base.java Derived.scala 
Derived.scala:2: error: type mismatch;
 found   : java.lang.Class[String](classOf[java.lang.String])
 required: java.lang.Class
  def foo(a: AnyRef) = classOf[String]
                              ^
one error found
```
